tests/problems/compile-error/generator/generator/gen.dummy
// To be compiled with the dummy language
